<resources>
    <string name="app_name">Rock Paper Scissors Wars</string>
    <string-array name="lang_array">
        <item>Polski</item>
        <item>English</item>
    </string-array>
    <string-array name="lang_codes_array">
        <item>pl</item>
        <item>en</item>
    </string-array>
    <string name="fight">Fight</string>
    <string name="warrior">Warrior</string>
    <string name="settings">Settings</string>
    <string name="warrior_name_prompt">Select warrior name</string>
    <string name="choose_weapon">Choose your weapon</string>
    <string name="confirm">Confirm</string>
    <string name="choose_weapon_info">Selected weapon will increase it\'s starting strength, you can increase power of this and other weapons by leveling</string>
    <string name="choose_name">Select warrior name</string>
    <string name="select_name_and_weapon">Select warrior name and select a weapon</string>
    <string name="error_db_connection">Error connecting to database</string>
    <string name="error_auth">Authentication Failed.</string>
    <string name="won">won</string>
    <string name="draw">Draw</string>
    <string name="level">Level</string>
    <string name="experience">Experience</string>
    <string name="victories">Victories</string>
    <string name="skillpoints">Skill points</string>
    <string name="progress_to_next_lvl">Progress to next level</string>
    <string name="win">Victory</string>
    <string name="defeat">Defeat</string>
    <string name="start">Start</string>
    <string name="delete_warrior">Delete warrior</string>
    <string name="delete_account">Delete account</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log out</string>
    <string name="logged_in">Logged in</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="how_to_play">How to play</string>
    <string name="version">Version</string>
    <string name="general_explanation">Rock Paper Wars is online rock, paper, scissors game with RPG elements.</string>
    <string name="types_explanation">Warrior has three weapons to his disposition: Rock, Paper, Scissors. Each has a power described by number above it. Rock beats Scissors, Scissors beat Paper, and Paper beats Rock. Damage is equal to weapon value. In case of draw (both players use the same weapon), only half of damage is dealt to both players.</string>
    <string name="health_defence_explanation">Every player has a health value represented by hearth symbol. If it reaches zero, player loses a battle. Shield defines player defence, represented by a percent value. It\'s a chance to avoid getting damaged in case of losing.</string>
    <string name="warrior_explanation">After a victory player gets experience used to increase his level. After reaching a new level player can increase his attributes on the Warrior screen.</string>
    <string name="choose_lang">Choose language</string>
    <string name="quit_to_apply">Quit this screen, to apply changes.</string>
    <string name="waiting_for_enemy">Waiting for the opponent</string>
    <string name="no_battle_found">No battle found, creating a new one</string>
    <string name="dies">dies</string>
    <string name="both_died">You both die.</string>
    <string name="ranking">Ranking</string>
    <string name="victory_ranking">Victory ranking</string>
</resources>
