<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jakub.rockpaperscissorswars.OptionsActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_lang"
        android:textSize="16sp"
        android:textColor="@color/light_red"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>
    <Spinner
        android:id="@+id/lang_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_lang"
        android:entries="@array/lang_array"
        android:layout_marginBottom="20dp">
    </Spinner>
    <Button
        android:id="@+id/delete_warrior_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_warrior"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_red"/>
    <Button
        android:id="@+id/delete_account_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_red"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/version_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"/>
    </LinearLayout>
</LinearLayout>
