<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jakub.rockpaperscissorswars.InfoActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play"
        android:textSize="26sp"
        android:textColor="@color/light_red"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/general_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_explanation"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/rock" />
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/paper"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/scissors"/>
            </LinearLayout>
            <TextView
                android:id="@+id/types_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/types_explanation"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_health" />
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_defence"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/health_defence_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/health_defence_explanation"/>
            <TextView
                android:id="@+id/warrior_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warrior_explanation"/>
            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:backgroundTint="@color/light_red"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
