<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jakub.rockpaperscissorswars.CharacterCreationActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:padding="15dp"/>
    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="15"
        android:maxLines="1"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:hint="@string/choose_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_weapon"
        android:gravity="center"
        android:background="@color/light_gray"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:padding="12dp"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp">
        <ImageButton
            android:id="@+id/rock_btn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/rock"
            android:scaleType="fitCenter"
            android:background="@null"/>
        <ImageButton
            android:id="@+id/paper_btn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/paper"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <ImageButton
            android:id="@+id/scissors_btn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/scissors"
            android:scaleType="fitCenter"
            android:background="@null"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_weapon_info"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:backgroundTint="@color/light_red"
        android:textColor="@color/white"/>
</LinearLayout>
